# emp-agmpc

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  debug  run
.github/workflows/: arm.yml  x86.yml
cmake/: emp-agmpc-config.cmake
emp-agmpc/: abitmp.h  cmpc_config.h  emp-agmpc.h  flexible_input_output.h  fpremp.h  helper.h  mpc.h  netmp.h
test/: CMakeLists.txt  aes.cpp  bench_mpc.cpp  not.txt  pr10_circuit.txt  pr10_test.cpp  scratch.cpp  sha1.cpp  sha256.cpp  test.h  test_in_out.cpp  test_mpc.cpp  test_mpc_individual.cpp  triple.cpp  xor.txt
